Bugfix: make viewport responsive (not stuck >= 980px)

--- a/css/reset.css
+++ b/css/reset.css
@@ -7,9 +7,7 @@ html, body, div, span, applet, object, iframe, blockquote, pre,
 abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
-center,
-dl, dt, dd, ol, ul, li,
-fieldset, legend,
+center, dl, dt, dd, ol, ul, li, fieldset, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
