--- a/scss/pages/_view-events.scss
+++ b/scss/pages/_view-events.scss
@@ -4,7 +4,7 @@
 
     .event {
         height: 30px; // these are placeholders for now
-        width: 290px;
+        width: 90%;
         border: 1px solid black;
         margin: 5px 0 5px 0;
     }
